--- a/config/locales/zh_cn.yml
+++ b/config/locales/zh_cn.yml
@@ -26,34 +26,34 @@ zh_cn:
       half_a_minute: "半分钟"
       less_than_x_seconds:
         one: "不到1秒"
-        other: "不到{{count}}秒"
+        other: "不到%{count}秒"
       x_seconds:
         one: "1 秒"
-        other: "{{count}} 秒"
+        other: "%{count} 秒"
       less_than_x_minutes:
         one: "不到 1 分钟"
-        other: "不到 {{count}} 分钟"
+        other: "不到 %{count} 分钟"
       x_minutes:
         one: "1 分钟"
-        other: "{{count}} 分钟"
+        other: "%{count} 分钟"
       about_x_hours:
         one: "约 1 小时"
-        other: "约 {{count}} 小时"
+        other: "约 %{count} 小时"
       x_days:
         one: "1 天"
-        other: "{{count}} 天"
+        other: "%{count} 天"
       about_x_months:
         one: "约 1 个月"
-        other: "约 {{count}} 个月"
+        other: "约 %{count} 个月"
       x_months:
         one: "1 个月"
-        other: "{{count}} 个月"
+        other: "%{count} 个月"
       about_x_years:
         one: "约1年"
-        other: "约 {{count}} 年"
+        other: "约 %{count} 年"
       over_x_years:
         one: "1 年多"
-        other: "{{count}} 年多"
+        other: "%{count} 年多"
     prompts:
       year: "年"
       month: "月"
@@ -105,8 +105,8 @@ zh_cn:
     errors:
       template:
         header:
-          one: "有 1 个错误发生导致「{{model}}」无法被保存。"
-          other: "有 {{count}} 个错误发生导致「{{model}}」无法被保存。"
+          one: "有 1 个错误发生导致「%{model}」无法被保存。"
+          other: "有 %{count} 个错误发生导致「%{model}」无法被保存。"
         body: "如下字段出现错误："
       messages:
         inclusion: "不包含于列表中"
@@ -116,16 +116,16 @@ zh_cn:
         accepted: "必须是可被接受的"
         empty: "不能留空"
         blank: "不能为空字符"
-        too_long: "过长（最长为 {{count}} 个字符）"
-        too_short: "过短（最短为 {{count}} 个字符）"
-        wrong_length: "长度非法（必须为 {{count}} 个字符）"
+        too_long: "过长（最长为 %{count} 个字符）"
+        too_short: "过短（最短为 %{count} 个字符）"
+        wrong_length: "长度非法（必须为 %{count} 个字符）"
         taken: "已经被使用"
         not_a_number: "不是数字"
-        greater_than: "必须大于 {{count}}"
-        greater_than_or_equal_to: "必须大于或等于 {{count}}"
-        equal_to: "必须等于 {{count}}"
-        less_than: "必须小于 {{count}}"
-        less_than_or_equal_to: "必须小于或等于 {{count}}"
+        greater_than: "必须大于 %{count}"
+        greater_than_or_equal_to: "必须大于或等于 %{count}"
+        equal_to: "必须等于 %{count}"
+        less_than: "必须小于 %{count}"
+        less_than_or_equal_to: "必须小于或等于 %{count}"
         odd: "必须为单数"
         even: "必须为双数"
         
